--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
   </nav>
   <section id="profile">
     <div class="section__pic-container">
-      <img src="/home/blue/Documents/Jega/portfolio/P1/assets/working women2.jpg" class="class_22"
-        alt="Jegadeeswari profile picture" />
+      <img src="./assets/working women2.jpg" class="class_22" alt="Jegadeeswari profile picture" />
     </div>
     <div class="section__text">
       <p class="section__text__p1">Hello, I'm</p>
@@ -87,8 +86,7 @@
     <h1 class="title">About Me</h1>
     <div class="section-container">
       <div class="section__pic-container">
-        <img src="/home/blue/Documents/Jega/portfolio/P1/assets/working women-removebg-preview.jpg"
-          alt="Profile picture" class="about-pic" />
+        <img src="./assets/working women-removebg-preview.jpg" alt="Profile picture" class="about-pic" />
       </div>
       <div class="about-details-container">
         <div class="about-containers">
