--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="section__text">
       <p class="section__text__p1">Hello, I'm</p>
       <h1 class="title">Jegadeeswari</h1>
-      <p class="section__text__p2 typing-container">Frontend Developer</p>
+      <p class="section__text__p2 typing-container">Fullstack Developer</p>
       <div class="btn-container">
         <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">
           Download CV
